@@ -92,7 +92,6 @@ rtems_task Init(
 
 /**************** START OF CONFIGURATION INFORMATION ****************/
 
-#define CONFIGURE_INIT
 #define CONFIGURE_APPLICATION_NEEDS_CONSOLE_DRIVER
 #define CONFIGURE_APPLICATION_NEEDS_CLOCK_DRIVER
 
@@ -103,6 +102,6 @@ rtems_task Init(
 
 #define CONFIGURE_EXTRA_TASK_STACKS         (3 * RTEMS_MINIMUM_STACK_SIZE)
 
+#define CONFIGURE_INIT
 #include <rtems/confdefs.h>
-
 /****************  END OF CONFIGURATION INFORMATION  ****************/
